--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy",
     "build:modern": "BABEL_ENV=modern babel src -d dist/modern",
     "build": "yarn run clean && yarn build:legacy && yarn build:modern",
+    "start": "node server.js",
     "prepublish": "yarn build",
     "precommit": "lint-staged"
   },
