--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "flow-bin": "^0.59.0",
     "husky": "^0.14.3",
@@ -35,13 +36,17 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "joi": "^13.0.2",
     "load-json-file": "^4.0.0",
     "lockfile": "^1.0.3",
     "morgan": "^1.9.0",
     "path-exists": "^3.0.0",
+    "redis": "^2.8.0",
     "strip-indent": "^2.0.0",
+    "uuid": "^3.1.0",
     "write-json-file": "^2.3.0"
   },
   "jest": {
