Adds beginnings of Bitbucket addon

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "flow": "flow status",
     "test": "jest --coverage",
     "format": "prettier --write src/**/*.js",
-    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy",
-    "build:modern": "BABEL_ENV=modern babel src -d dist/modern",
+    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D",
+    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D",
     "build": "yarn run clean && yarn build:legacy && yarn build:modern",
     "start": "node server.js",
     "prepublish": "yarn build",
