--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
     "express": "^4.16.2",
     "joi": "^13.0.2",
     "load-json-file": "^4.0.0",
