Fixes hashBang in server.js and files exposed in published dist

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "bin": {
     "landkid": "server.js"
   },
+  "files": [
+    "dist",
+    "server.js",
+    "index.js"
+  ],
   "scripts": {
     "clean": "rm -rf dist",
     "flow": "flow status",
