--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "flow": "flow status",
     "test": "ava",
     "format": "prettier --write src/**/*.js",
-    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D",
-    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D",
+    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D && OUTPUT_PATH=dist/modern/static webpack",
+    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/legacy/static webpack",
     "build": "yarn run clean && yarn build:legacy && yarn build:modern",
     "start": "node server.js | bunyan -o short",
     "prepublish": "yarn build",
@@ -34,13 +34,16 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-register": "^6.26.0",
     "flow-bin": "^0.59.0",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^5.0.0",
     "nock": "^9.1.6",
     "prettier": "^1.8.2",
     "sinon": "^4.2.2",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "axios": "^0.17.1",
@@ -52,14 +55,18 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bunyan": "^1.8.12",
+    "date-fns": "^1.29.0",
     "express": "^4.16.2",
     "load-json-file": "^4.0.0",
     "lockfile": "^1.0.3",
     "morgan": "^1.9.0",
     "path-exists": "^3.0.0",
+    "qs": "^6.5.2",
     "redis": "^2.8.0",
     "strip-indent": "^2.0.0",
+    "unfetch": "^3.0.0",
     "uuid": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
     "write-json-file": "^2.3.0"
   },
   "jest": {
