Adds start and dev scripts

--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "flow": "flow status",
     "test": "ava",
     "format": "prettier --write src/**/*.js",
-    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D && OUTPUT_PATH=dist/modern/static webpack",
-    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/legacy/static webpack",
+    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D && OUTPUT_PATH=dist/legacy/static webpack",
+    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack",
     "build": "yarn run clean && yarn build:legacy && yarn build:modern",
-    "start": "node server.js | bunyan -o short",
+    "start": "NODE_ENV=production node server.js | bunyan -o short",
+    "dev": "node server.js | bunyan -o short",
     "prepublish": "yarn build",
     "precommit": "lint-staged"
   },
