--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "flow": "flow status",
     "test": "ava",
     "format": "prettier --write src/**/*.js",
-    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D && OUTPUT_PATH=dist/legacy/static webpack",
-    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack",
+    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D && OUTPUT_PATH=dist/legacy/static webpack --mode=production",
+    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack --mode=production",
     "build": "yarn run clean && yarn build:legacy && yarn build:modern",
     "start": "NODE_ENV=production node server.js | bunyan -o short",
     "dev": "node server.js | bunyan -o short",
@@ -31,15 +31,20 @@
   },
   "devDependencies": {
     "ava": "^0.25.0",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "emotion": "^9.1.3",
     "flow-bin": "^0.59.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^5.0.0",
     "nock": "^9.1.6",
+    "preact": "^8.2.9",
+    "preact-compat": "^3.18.0",
     "prettier": "^1.8.2",
     "sinon": "^4.2.2",
     "supertest": "^3.0.0",
