--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "test": {
       "presets": [
         "flow",
+        "react",
         ["env", { "loose": true, "targets": { "node": "current" } }]
       ],
       "plugins": [
@@ -12,7 +13,11 @@
       ]
     },
     "legacy": {
-      "presets": ["flow", ["env", { "loose": true, "targets": { "node": 4 } }]],
+      "presets": [
+        "flow",
+        "react",
+        ["env", { "loose": true, "targets": { "node": 4 } }]
+      ],
       "plugins": [
         "transform-object-rest-spread",
         "transform-class-properties",
@@ -21,7 +26,11 @@
       "ignore": ["__tests__"]
     },
     "modern": {
-      "presets": ["flow", ["env", { "loose": true, "targets": { "node": 8 } }]],
+      "presets": [
+        "flow",
+        "react",
+        ["env", { "loose": true, "targets": { "node": 8 } }]
+      ],
       "plugins": [
         "transform-object-rest-spread",
         "transform-class-properties",
