Moves webpack config around, fixes bug starting bin file

--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "flow": "flow status",
     "test": "ava",
     "format": "prettier --write src/**/*.js",
-    "build:legacy": "BABEL_ENV=legacy babel src -d dist/legacy -D && OUTPUT_PATH=dist/legacy/static webpack --mode=production",
-    "build:modern": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack --mode=production",
+    "build:legacy": "BABEL_ENV=legacy NODE_ENV=production babel src -d dist/legacy -D && OUTPUT_PATH=dist/legacy/static webpack --mode=production",
+    "build:modern": "BABEL_ENV=modern NODE_ENV=production babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack --mode=production",
+    "build:dev": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack --mode=production",
     "build": "yarn run clean && yarn build:legacy && yarn build:modern",
-    "start": "NODE_ENV=production node server.js | bunyan -o short",
+    "start": "node server.js | bunyan -o short",
     "dev": "node server.js | bunyan -o short",
     "prepublish": "yarn build",
     "precommit": "lint-staged"
@@ -48,20 +49,22 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-node-env-inline": "^0.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bunyan": "^1.8.12",
     "date-fns": "^1.29.0",
     "express": "^4.16.2",
+    "find-up": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "load-json-file": "^4.0.0",
     "lockfile": "^1.0.3",
