--- a/.babelrc
+++ b/.babelrc
@@ -9,7 +9,8 @@
       "plugins": [
         "transform-object-rest-spread",
         "transform-class-properties",
-        "transform-runtime"
+        "transform-runtime",
+        "transform-node-env-inline"
       ]
     },
     "legacy": {
@@ -21,7 +22,8 @@
       "plugins": [
         "transform-object-rest-spread",
         "transform-class-properties",
-        "transform-runtime"
+        "transform-runtime",
+        "transform-node-env-inline"
       ],
       "ignore": ["__tests__"]
     },
@@ -34,7 +36,8 @@
       "plugins": [
         "transform-object-rest-spread",
         "transform-class-properties",
-        "transform-runtime"
+        "transform-runtime",
+        "transform-node-env-inline"
       ],
       "ignore": ["__tests__"]
     }
