--- a/package.json
+++ b/package.json
@@ -45,20 +45,20 @@
     "prettier": "^1.8.2",
     "sinon": "^4.2.2",
     "supertest": "^3.0.0",
-    "webpack-cli": "^2.1.3"
-  },
-  "dependencies": {
-    "axios": "^0.17.1",
+    "webpack-cli": "^2.1.3",
     "babel-cli": "^6.26.0",
-    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-node-env-inline": "^0.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0",
-    "babel-preset-react": "^6.24.1",
+    "babel-preset-flow": "^6.23.0"
+  },
+  "dependencies": {
+    "axios": "^0.17.1",
+    "babel-loader": "^7.1.4",
     "babel-runtime": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bunyan": "^1.8.12",
