--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "landkid",
   "version": "0.2.10",
   "description": "CI Queue",
-  "main": "index.js",
+  "main": "dist/index.js",
   "contributors": [
     "James Kyle <me@thejameskyle.com>",
     "Luke Batchelor <batchelor.luke@gmail.com>"
@@ -22,20 +22,28 @@
     "flow": "flow status",
     "test": "ava",
     "format": "prettier --write src/**/*.js",
-    "build:legacy": "BABEL_ENV=legacy NODE_ENV=production babel src -d dist/legacy -D && OUTPUT_PATH=dist/legacy/static webpack --mode=production",
-    "build:modern": "BABEL_ENV=modern NODE_ENV=production babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack --mode=production",
-    "build:dev": "BABEL_ENV=modern babel src -d dist/modern -D && OUTPUT_PATH=dist/modern/static webpack --mode=production",
-    "build": "yarn run clean && yarn build:legacy && yarn build:modern",
+    "build:front-end": "OUTPUT_PATH=dist/static webpack --mode=production",
+    "build:ac-json": "cp ./src/static/bitbucket/atlassian-connect.json dist/static/bitbucket",
+    "build:server": "tsc",
+    "build": "yarn run clean && yarn build:server && yarn build:front-end && yarn build:ac-json",
     "start": "node server.js | bunyan -o short",
     "dev": "node server.js | bunyan -o short",
-    "prepublish": "yarn build",
+    "prePublishOnly": "yarn build",
     "precommit": "lint-staged"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.17.0",
+    "@types/bunyan": "^1.8.5",
+    "@types/express": "^4.16.0",
+    "@types/find-up": "^2.1.1",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^10.12.7",
+    "@types/p-retry": "^2.0.0",
+    "@types/react": "^16.7.5",
+    "@types/react-dom": "^16.0.9",
     "ava": "^0.25.0",
-    "babel-register": "^6.26.0",
+    "cache-loader": "^1.2.5",
     "emotion": "^9.1.3",
-    "flow-bin": "^0.76.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^5.0.0",
@@ -45,20 +53,11 @@
     "prettier": "^1.8.2",
     "sinon": "^4.2.2",
     "supertest": "^3.0.0",
-    "webpack-cli": "^2.1.3",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-node-env-inline": "^0.4.3",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-flow": "^6.23.0"
+    "ts-loader": "^5.3.0",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "babel-loader": "^7.1.4",
-    "babel-runtime": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "bunyan": "^1.8.12",
@@ -74,6 +73,7 @@
     "qs": "^6.5.2",
     "redis": "^2.8.0",
     "strip-indent": "^2.0.0",
+    "typescript": "^3.1.6",
     "unfetch": "^3.0.0",
     "uuid": "^3.1.0",
     "webpack": "^4.8.1",
