--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build:server": "tsc",
     "build": "yarn run clean && yarn build:server && yarn build:front-end && yarn build:ac-json",
     "start": "node server.js | bunyan -o short",
-    "dev": "node server.js | bunyan -o short",
+    "dev": "yarn build:server && yarn build:ac-json && node server.js | bunyan -o short",
     "prePublishOnly": "yarn build",
     "precommit": "lint-staged"
   },
@@ -72,6 +72,10 @@
     "path-exists": "^3.0.0",
     "qs": "^6.5.2",
     "redis": "^2.8.0",
+    "reflect-metadata": "^0.1.12",
+    "sequelize": "^4.41.2",
+    "sequelize-typescript": "^0.6.6",
+    "sqlite3": "^4.0.4",
     "strip-indent": "^2.0.0",
     "typescript": "^3.1.6",
     "unfetch": "^3.0.0",
