--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/p-retry": "^2.0.0",
     "@types/react": "^16.7.5",
     "@types/react-dom": "^16.0.9",
+    "@types/redis": "^2.8.7",
+    "@types/redlock": "^3.0.2",
     "ava": "^0.25.0",
     "cache-loader": "^1.2.5",
     "emotion": "^9.1.3",
@@ -72,6 +74,7 @@
     "path-exists": "^3.0.0",
     "qs": "^6.5.2",
     "redis": "^2.8.0",
+    "redlock": "^3.1.2",
     "reflect-metadata": "^0.1.12",
     "sequelize": "^4.41.2",
     "sequelize-typescript": "^0.6.6",
