--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "webpack-cli": "^2.1.3"
   },
   "dependencies": {
+    "atlassian-jwt": "^1.0.1",
     "axios": "^0.17.1",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
