--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "contributors": [
     "James Kyle <me@thejameskyle.com>",
-    "Luke Batchelor <batchelor.luke@gmail.com>"
+    "Luke Batchelor <batchelor.luke@gmail.com>",
+    "Samuel Attard <samuel.r.attard@gmail.com>"
   ],
   "license": "MIT",
   "bin": {
@@ -18,25 +19,21 @@
     "webpack.config.js"
   ],
   "scripts": {
-    "clean": "rm -rf dist",
-    "flow": "flow status",
+    "clean": "rimraf dist",
     "test": "ava",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
-    "build:front-end": "OUTPUT_PATH=dist/static webpack --mode=production",
-    "build:ac-json": "cp ./src/static/bitbucket/atlassian-connect.json dist/static/bitbucket",
+    "build": "yarn run clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
-    "build": "yarn run clean && yarn build:server && yarn build:front-end && yarn build:ac-json",
-    "start": "node server.js | bunyan -o short",
-    "dev": "yarn build:server && yarn build:ac-json && node server.js | bunyan -o short",
+    "build:ui": "cross-env OUTPUT_PATH=dist/static webpack --mode=production",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "dev": "tsc && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./server.js --watch dist --watch config.js --delay 1\"",
     "prePublishOnly": "yarn build",
     "precommit": "lint-staged"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/bunyan": "^1.8.5",
     "@types/express": "^4.16.0",
-    "@types/find-up": "^2.1.1",
-    "@types/morgan": "^1.7.35",
+    "@types/express-winston": "^3.0.0",
     "@types/node": "^10.12.7",
     "@types/p-retry": "^2.0.0",
     "@types/react": "^16.7.5",
@@ -45,34 +42,35 @@
     "@types/redlock": "^3.0.2",
     "ava": "^0.25.0",
     "cache-loader": "^1.2.5",
+    "concurrently": "^4.1.0",
+    "cross-env": "^5.2.0",
     "emotion": "^9.1.3",
+    "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^5.0.0",
     "nock": "^9.1.6",
+    "nodemon": "^1.18.6",
     "preact": "^8.2.9",
     "preact-compat": "^3.18.0",
     "prettier": "^1.8.2",
+    "rimraf": "^2.6.2",
+    "rxjs-compat": "^6.3.3",
     "sinon": "^4.2.2",
     "supertest": "^3.0.0",
     "ts-loader": "^5.3.0",
-    "webpack-cli": "^2.1.3"
+    "webpack": "^4.8.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
     "atlassian-jwt": "^1.0.1",
     "axios": "^0.17.1",
-    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
-    "bunyan": "^1.8.12",
     "date-fns": "^1.29.0",
     "express": "^4.16.2",
-    "find-up": "^2.1.0",
-    "html-webpack-plugin": "^3.2.0",
-    "load-json-file": "^4.0.0",
-    "lockfile": "^1.0.3",
-    "morgan": "^1.9.0",
+    "express-winston": "^3.0.1",
     "p-retry": "^2.0.0",
-    "path-exists": "^3.0.0",
     "qs": "^6.5.2",
     "redis": "^2.8.0",
     "redlock": "^3.1.2",
@@ -80,13 +78,9 @@
     "sequelize": "^4.41.2",
     "sequelize-typescript": "^0.6.6",
     "sqlite3": "^4.0.4",
-    "strip-indent": "^2.0.0",
     "typescript": "^3.1.6",
     "unfetch": "^3.0.0",
-    "uuid": "^3.1.0",
-    "webpack": "^4.8.1",
-    "webpack-dev-middleware": "^3.1.3",
-    "write-json-file": "^2.3.0"
+    "winston": "^3.1.0"
   },
   "jest": {
     "resetMocks": true,
