--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,8 @@ jobs:
           key: v1-dependencies-{{ checksum "yarn.lock" }}
 
       - run: yarn build
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
