feat: add oauth

--- a/package.json
+++ b/package.json
@@ -28,14 +28,19 @@
     "start": "cross-env NODE_ENV=production node ./dist",
     "dev": "tsc && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --delay 1\"",
     "prePublishOnly": "yarn build",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "postinstall": "node tools/hax.js"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/connect-redis": "^0.0.7",
     "@types/express": "^4.16.0",
+    "@types/express-session": "^1.15.11",
     "@types/express-winston": "^3.0.0",
     "@types/node": "^10.12.7",
     "@types/p-retry": "^2.0.0",
+    "@types/passport": "^0.4.7",
+    "@types/passport-oauth2": "^1.4.7",
     "@types/react": "^16.7.5",
     "@types/react-dom": "^16.0.9",
     "@types/redis": "^2.8.7",
@@ -67,10 +72,14 @@
     "atlassian-jwt": "^1.0.1",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
+    "connect-redis": "^3.4.0",
     "date-fns": "^1.29.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
     "p-retry": "^2.0.0",
+    "passport": "^0.4.0",
+    "passport-oauth2": "^1.4.0",
     "qs": "^6.5.2",
     "redis": "^2.8.0",
     "redlock": "^3.1.2",
