--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,40 @@ jobs:
           key: v1-dependencies-{{ checksum "yarn.lock" }}
 
       - run: yarn build
+publish:
+    docker:
+      - image: circleci/node:8.10
+
+    working_directory: ~/repo
+
+    steps:
+      - checkout
+
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "yarn.lock" }}
+          - v1-dependencies-
+
+      - run: yarn
+
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-dependencies-{{ checksum "yarn.lock" }}
+
+      - setup_remote_docker
+
+      - run:
+          command: ./.circleci/publish-landkid-docker.sh
+          name: Deploy to Docker
 workflows:
   version: 2
   build:
     jobs:
       - build
+      - publish:
+          requires:
+            - build
+          filters:
+            branches:
+              only: /^(?!pull\/).*$/
