--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "lint-staged": "^5.0.0",
     "nock": "^9.1.6",
     "nodemon": "^1.18.6",
-    "preact": "^8.2.9",
-    "preact-compat": "^3.18.0",
     "prettier": "^1.8.2",
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
@@ -66,6 +64,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@atlaskit/pagination": "^8.0.5",
     "atlassian-jwt": "^1.0.1",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
@@ -78,14 +77,16 @@
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "qs": "^6.5.2",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "redis": "^2.8.0",
     "redlock": "^3.1.2",
     "reflect-metadata": "^0.1.12",
     "sequelize": "^4.41.2",
     "sequelize-typescript": "^0.6.6",
     "sqlite3": "^4.0.4",
+    "styled-components": "^4.1.1",
     "typescript": "^3.1.6",
-    "unfetch": "^3.0.0",
     "winston": "^3.1.0"
   },
   "jest": {
