--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "sinon": "^4.2.2",
     "supertest": "^3.0.0",
     "ts-loader": "^5.3.0",
+    "umzug": "^2.2.0",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.10"
