--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --delay 1\"",
     "prePublishOnly": "yarn build",
     "precommit": "lint-staged",
-    "postinstall": "node tools/hax.js"
+    "postinstall": "node tools/hax.js",
+    "migrate": "ts-node src/db/MigrationService.ts"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
@@ -42,6 +43,7 @@
     "@types/react-dom": "^16.0.9",
     "@types/redis": "^2.8.7",
     "@types/redlock": "^3.0.2",
+    "@types/umzug": "^2.2.2",
     "ava": "^0.25.0",
     "cache-loader": "^1.2.5",
     "concurrently": "^4.1.0",
@@ -58,7 +60,6 @@
     "sinon": "^4.2.2",
     "supertest": "^3.0.0",
     "ts-loader": "^5.3.0",
-    "umzug": "^2.2.0",
     "webpack": "^4.8.1",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.10"
@@ -88,6 +89,7 @@
     "sqlite3": "^4.0.4",
     "styled-components": "^3.2.6",
     "typescript": "^3.1.6",
+    "umzug": "^2.2.0",
     "winston": "^3.1.0"
   },
   "jest": {
