--- a/package.json
+++ b/package.json
@@ -47,7 +47,11 @@
     "ava": "^0.25.0",
     "cache-loader": "^1.2.5",
     "concurrently": "^4.1.0",
+    "cypress": "^3.8.3",
+    "cypress-wait-until": "^1.6.1",
     "emotion": "^9.1.3",
+    "faker": "^4.1.0",
+    "form-data": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
@@ -67,7 +71,7 @@
   "dependencies": {
     "@atlaskit/pagination": "^8.0.5",
     "atlassian-jwt": "^1.0.1",
-    "axios": "^0.17.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.0",
     "cross-env": "^5.2.0",
