--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2
+
 jobs:
   build:
     docker:
@@ -8,8 +9,8 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "yarn.lock" }}
-          - v1-dependencies-
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            - v1-dependencies-
       - run: yarn
       - save_cache:
           paths:
@@ -25,8 +26,8 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "yarn.lock" }}
-          - v1-dependencies-
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            - v1-dependencies-
       - run: yarn
       - save_cache:
           paths:
@@ -36,6 +37,26 @@ jobs:
       - run:
           command: ./.circleci/publish-landkid-docker.sh
           name: Deploy to Docker
+
+  test:
+    docker:
+      - image: cypress/base:10
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            - v1-dependencies-
+      - run: yarn
+      - save_cache:
+          paths:
+            - node_modules
+            - .cache
+          key: v1-dependencies-{{ checksum "yarn.lock" }}
+      - run: |
+          echo "{\"BITBUCKET_APP_PASSWORD\":\"$BITBUCKET_APP_PASSWORD\"}" > cypress.env.json
+          yarn test
 
 workflows:
   version: 2
@@ -48,3 +69,10 @@ workflows:
           filters:
             branches:
               only: /^(?!pull\/).*$/
+      - run_tests:
+          type: approval
+          requires:
+            - build
+      - test:
+          requires:
+            - run_tests
