--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,26 +53,29 @@ jobs:
           paths:
             - node_modules
             - .cache
-          key: v1-dependencies-{{ checksum "yarn.lock" }}
-      - run: |
-          echo "{\"BITBUCKET_APP_PASSWORD\":\"$BITBUCKET_APP_PASSWORD\",\"LANDKID_SESSION_ID\":\"$LANDKID_SESSION_ID\"}" > cypress.env.json
-          ./test.sh
+          key: v1-dependencies-{{ checksum "yarn.lock" }}`
+      - run:
+          name: Cypress tests
+          command: |
+            echo "{\"BITBUCKET_APP_PASSWORD\":\"$BITBUCKET_APP_PASSWORD\",\"LANDKID_SESSION_ID\":\"$LANDKID_SESSION_ID\"}" > cypress.env.json
+            yarn test
 
 workflows:
   version: 2
   build:
     jobs:
-      - build
-      - publish:
-          requires:
-            - build
-          filters:
-            branches:
-              only: /^(?!pull\/).*$/
-      - hold_tests:
-          type: approval
-          requires:
-            - build
-      - test:
-          requires:
-            - hold_tests
+      - test
+      # - build
+      # - publish:
+      #     requires:
+      #       - build
+      #     filters:
+      #       branches:
+      #         only: /^(?!pull\/).*$/
+      # - hold_tests:
+      #     type: approval
+      #     requires:
+      #       - build
+      # - test:
+      #     requires:
+      #       - hold_tests
