--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "lint-staged": "^5.0.0",
+    "ngrok": "^3.2.7",
     "nock": "^9.1.6",
     "nodemon": "^1.18.6",
     "prettier": "^1.8.2",
