--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
+    "joi": "^14.3.1",
     "lint-staged": "^5.0.0",
     "ngrok": "^3.2.7",
     "nock": "^9.1.6",
