--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,65 @@
 version: 2
+
 jobs:
   build:
     docker:
-      - image: circleci/node:8.10
-
+      - image: circleci/node:8.12
     working_directory: ~/repo
-
     steps:
       - checkout
-
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "yarn.lock" }}
-          - v1-dependencies-
-
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            - v1-dependencies-
       - run: yarn
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "yarn.lock" }}
-
       - run: yarn build
+
   publish:
     docker:
-      - image: circleci/node:8.10
-
+      - image: circleci/node:8.12
     working_directory: ~/repo
-
     steps:
       - checkout
-
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "yarn.lock" }}
-          - v1-dependencies-
-
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            - v1-dependencies-
       - run: yarn
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "yarn.lock" }}
-
       - setup_remote_docker
-
       - run:
           command: ./.circleci/publish-landkid-docker.sh
           name: Deploy to Docker
+
+  test:
+    docker:
+      - image: cypress/base:10
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "yarn.lock" }}
+            - v1-dependencies-
+      - run: yarn
+      - save_cache:
+          paths:
+            - node_modules
+            - .cache
+          key: v1-dependencies-{{ checksum "yarn.lock" }}`
+      - run:
+          name: Cypress tests
+          command: |
+            echo "{\"BITBUCKET_APP_PASSWORD\":\"$BITBUCKET_APP_PASSWORD\",\"LANDKID_SESSION_ID\":\"$LANDKID_SESSION_ID\"}" > cypress.env.json
+            yarn test
+
 workflows:
   version: 2
   build:
@@ -59,3 +71,10 @@ workflows:
           filters:
             branches:
               only: /^(?!pull\/).*$/
+  test:
+    jobs:
+      - hold:
+          type: approval
+      - test:
+          requires:
+            - hold
