--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ node_modules
 dist/
 coverage/
 landkid-queue.*
-/config.js
 log.txt
 .DS_Store
 .cache-loader
@@ -11,3 +10,6 @@ db.sqlite
 env
 env.sh
 .logs
+cypress.env.json
+/cypress/screenshots
+config.js
