--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "test": "ava",
+    "test": "yarn run cypress run",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
     "build": "yarn run clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
@@ -47,11 +47,15 @@
     "ava": "^0.25.0",
     "cache-loader": "^1.2.5",
     "concurrently": "^4.1.0",
+    "cypress": "^4.0.2",
     "emotion": "^9.1.3",
+    "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
+    "joi": "^14.3.1",
     "lint-staged": "^5.0.0",
+    "ngrok": "^3.2.7",
     "nock": "^9.1.6",
     "nodemon": "^1.18.6",
     "prettier": "^1.8.2",
@@ -67,7 +71,7 @@
   "dependencies": {
     "@atlaskit/pagination": "^8.0.5",
     "atlassian-jwt": "^1.0.1",
-    "axios": "^0.17.1",
+    "axios": "^0.19.2",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.4.0",
     "cross-env": "^5.2.0",
