--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   },
   "dependencies": {
     "@atlaskit/pagination": "^8.0.5",
+    "@types/micromatch": "^4.0.1",
     "atlassian-jwt": "^1.0.1",
     "axios": "^0.19.2",
     "body-parser": "^1.18.2",
@@ -82,6 +83,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
+    "micromatch": "^4.0.2",
     "p-retry": "^2.0.0",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
