--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build:server": "tsc",
     "build:ui": "cross-env OUTPUT_PATH=dist/static webpack --mode=production",
     "start": "cross-env NODE_ENV=production node ./dist",
-    "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --delay 1\"",
+    "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --watch rules --delay 1\"",
     "prePublishOnly": "yarn build",
     "precommit": "node tools/revert-test-local.js && lint-staged",
     "postinstall": "node tools/hax.js",
@@ -54,6 +54,7 @@
     "emotion": "^9.1.3",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "httplease-asap": "^0.3.2",
     "husky": "^0.14.3",
     "jest": "^21.2.1",
     "joi": "^14.3.1",
