--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "prettier": "^1.8.2",
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
+    "sqlite3": "^5.0.0",
     "ts-loader": "^5.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
