--- a/package.json
+++ b/package.json
@@ -75,12 +75,12 @@
     "connect-redis": "^3.4.0",
     "cross-env": "^5.2.0",
     "date-fns": "^1.29.0",
+    "delay": "^4.3.0",
     "emotion": "^10.0.27",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
     "micromatch": "^4.0.2",
-    "p-retry": "^2.0.0",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
     "pg": "^8.2.1",
