--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,25 @@
 {
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"outDir": "dist",
-		"lib": [
-			"es6",
-			"dom",
-			"es7"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"jsx": "react",
-		"experimentalDecorators": true,
-		"strictNullChecks": true,
-		"noUnusedLocals": true,
-		"noImplicitThis": true,
-		"noImplicitAny": true
-	},
-	"exclude": [
-		"node_modules",
-		"public"
-	]
+    "compilerOptions": {
+        "module": "commonjs",
+        "target": "es6",
+        "outDir": "dist",
+        "lib": [
+            "es6",
+            "dom",
+            "es7"
+        ],
+        "types": ["cypress"],
+        "sourceMap": true,
+        "rootDir": "src",
+        "jsx": "react",
+        "experimentalDecorators": true,
+        "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noImplicitThis": true,
+        "noImplicitAny": true
+    },
+    "exclude": [
+        "node_modules",
+        "public"
+    ]
 }
