--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express-session": "^1.15.11",
     "@types/express-winston": "^3.0.0",
     "@types/faker": "^4.1.12",
+    "@types/jest": "^26.0.5",
     "@types/joi": "^14.3.4",
     "@types/node": "^10.12.7",
     "@types/p-retry": "^2.0.0",
@@ -56,6 +57,7 @@
     "html-webpack-plugin": "^3.2.0",
     "httplease-asap": "^0.3.2",
     "husky": "^0.14.3",
+    "jest": "^25.5.4",
     "joi": "^14.3.1",
     "lint-staged": "^5.0.0",
     "nodemon": "^1.18.6",
@@ -63,6 +65,7 @@
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
     "sqlite3": "^5.0.0",
+    "ts-jest": "25.5.1",
     "ts-loader": "^5.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
