--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "pretest": "node tools/test-local.js",
-    "test": "yarn test:staging",
-    "posttest": "node tools/revert-test-local.js",
-    "test:staging": "yarn run cypress run --reporter junit",
+    "test:unit": "jest",
+    "pretest:integration": "node tools/test-local.js",
+    "test:integration": "yarn test:staging",
+    "posttest:integration": "node tools/revert-test-local.js",
+    "test:integration:staging": "cypress run --reporter junit",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
-    "build": "yarn run clean && yarn build:server && yarn build:ui",
+    "build": "yarn clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
     "build:ui": "cross-env OUTPUT_PATH=dist/static webpack --mode=production",
     "start": "cross-env NODE_ENV=production node ./dist",
     "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --watch rules --delay 1\"",
-    "prePublishOnly": "yarn build",
     "precommit": "node tools/revert-test-local.js && lint-staged",
     "postinstall": "node tools/hax.js",
     "migrate": "ts-node src/db/MigrationService.ts"
