--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
-    "pretest": "node tools/test-local.js",
-    "test": "yarn test:staging",
-    "posttest": "node tools/revert-test-local.js",
-    "test:staging": "yarn run cypress run --reporter junit",
+    "test:unit": "jest",
+    "pretest:integration": "node tools/test-local.js",
+    "test:integration": "yarn test:staging",
+    "posttest:integration": "node tools/revert-test-local.js",
+    "test:integration:staging": "cypress run --reporter junit",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
-    "build": "yarn run clean && yarn build:server && yarn build:ui",
+    "build": "yarn clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
     "build:ui": "cross-env OUTPUT_PATH=dist/static webpack --mode=production",
     "start": "cross-env NODE_ENV=production node ./dist",
     "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --watch rules --delay 1\"",
-    "prePublishOnly": "yarn build",
     "precommit": "node tools/revert-test-local.js && lint-staged",
     "postinstall": "node tools/hax.js",
     "migrate": "ts-node src/db/MigrationService.ts"
@@ -38,6 +38,9 @@
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/express-winston": "^3.0.0",
+    "@types/faker": "^4.1.12",
+    "@types/jest": "^26.0.5",
+    "@types/joi": "^14.3.4",
     "@types/node": "^10.12.7",
     "@types/p-retry": "^2.0.0",
     "@types/passport": "^0.4.7",
@@ -54,6 +57,7 @@
     "html-webpack-plugin": "^3.2.0",
     "httplease-asap": "^0.3.2",
     "husky": "^0.14.3",
+    "jest": "^25.5.4",
     "joi": "^14.3.1",
     "lint-staged": "^5.0.0",
     "nodemon": "^1.18.6",
@@ -61,6 +65,7 @@
     "rimraf": "^2.6.2",
     "rxjs-compat": "^6.3.3",
     "sqlite3": "^5.0.0",
+    "ts-jest": "25.5.1",
     "ts-loader": "^5.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
