--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: '2'
 services:
   redis2:
-    image: "redis"
+    image: 'redis'
     ports:
-      - "6379:6379"
+      - '6379:6379'
   postgres:
-    image: "postgres"
+    image: 'postgres'
     ports:
-      - "5432:5432"
+      - '5432:5432'
+    environment:
+      POSTGRES_HOST_AUTH_METHOD: 'trust'
