--- a/package.json
+++ b/package.json
@@ -103,6 +103,9 @@
     "umzug": "^2.2.0",
     "winston": "^3.1.0"
   },
+  "resolutions": {
+    "lodash": "^4.17.21"
+  },
   "lint-staged": {
     "*.js": [
       "prettier --write",
