--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sqlite3": "^5.0.0",
     "ts-jest": "25.5.1",
     "ts-loader": "^5.3.0",
+    "ts-node": "^9.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
