--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "sqlite3": "^5.0.0",
     "ts-jest": "25.5.1",
     "ts-loader": "^5.3.0",
+    "ts-node": "^9.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -85,7 +86,6 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-winston": "^3.0.1",
-    "hot-shots": "^8.3.0",
     "micromatch": "^4.0.2",
     "passport": "^0.4.0",
     "passport-oauth2": "^1.4.0",
