--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:unit": "jest",
     "pretest:integration": "node tools/test-local.js",
     "test:integration": "yarn test:integration:staging",
-    "posttest:integration": "node tools/revert-test-local.js",
+    "posttest:integration": "node tools/test-local.js --revert",
     "test:integration:staging": "cypress run --reporter junit",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
     "build": "yarn clean && yarn build:server && yarn build:ui",
@@ -28,26 +28,26 @@
     "build:ui": "cross-env OUTPUT_PATH=dist/static webpack --mode=production",
     "start": "cross-env NODE_ENV=production node ./dist",
     "dev": "yarn build:server && concurrently \"webpack-dev-server\" \"tsc -w\" \"nodemon ./dist --watch dist --watch config.js --watch rules --delay 1\"",
-    "precommit": "node tools/revert-test-local.js && lint-staged",
-    "postinstall": "node tools/hax.js",
-    "migrate": "ts-node src/db/MigrationService.ts"
+    "precommit": "node tools/test-local.js --revert && lint-staged",
+    "migrate": "ts-node src/db/MigrationService.ts",
+    "tunnel": "./tools/tunnel.sh"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/connect-redis": "^0.0.7",
+    "@types/connect-redis": "0.0.16",
     "@types/express": "^4.16.0",
-    "@types/express-session": "^1.15.11",
+    "@types/express-session": "^1.17.3",
     "@types/express-winston": "^3.0.0",
     "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.5",
     "@types/joi": "^14.3.4",
     "@types/node": "^10.12.7",
     "@types/p-retry": "^2.0.0",
-    "@types/passport": "^0.4.7",
-    "@types/passport-oauth2": "^1.4.7",
+    "@types/passport": "^1.0.6",
+    "@types/passport-oauth2": "^1.4.10",
     "@types/react": "^16.7.5",
     "@types/react-dom": "^16.0.9",
-    "@types/redis": "^2.8.7",
+    "@types/redis": "^2.8.28",
     "@types/redlock": "^3.0.2",
     "@types/umzug": "^2.2.2",
     "cache-loader": "^1.2.5",
@@ -78,21 +78,21 @@
     "atlassian-jwt": "^1.0.1",
     "axios": "^0.21.1",
     "body-parser": "^1.18.2",
-    "connect-redis": "^3.4.0",
+    "connect-redis": "^5.2.0",
     "cross-env": "^5.2.0",
     "date-fns": "^1.29.0",
     "delay": "^4.3.0",
     "emotion": "^10.0.27",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
+    "express-session": "^1.17.1",
     "express-winston": "^3.0.1",
     "micromatch": "^4.0.2",
-    "passport": "^0.4.0",
-    "passport-oauth2": "^1.4.0",
+    "passport": "^0.4.1",
+    "passport-oauth2": "^1.5.0",
     "pg": "^8.2.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "redis": "^2.8.0",
+    "redis": "^3.1.2",
     "redlock": "^3.1.2",
     "reflect-metadata": "^0.1.12",
     "sequelize": "^4.44.0",
@@ -105,7 +105,8 @@
   },
   "resolutions": {
     "lodash": "^4.17.21",
-    "color-string": "^1.5.5"
+    "color-string": "^1.5.5",
+    "@types/sequelize": "^4.28.9"
   },
   "lint-staged": {
     "*.js": [
