--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pretest:integration": "node tools/test-local.js",
     "test:integration": "yarn test:integration:staging",
     "posttest:integration": "node tools/test-local.js --revert",
-    "test:integration:staging": "cypress run --reporter junit",
+    "test:integration:staging": "ELECTRON_ENABLE_LOGGING=1 cypress run --reporter junit",
+    "test:integration:watch": "cypress open",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
     "build": "yarn clean && yarn build:server && yarn build:ui",
     "build:server": "tsc",
