--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "clean": "rimraf dist",
     "test:unit": "jest",
     "pretest:integration": "node tools/test-local.js",
-    "test:integration": "yarn test:integration:staging",
     "posttest:integration": "node tools/test-local.js --revert",
-    "test:integration:staging": "ELECTRON_ENABLE_LOGGING=1 cypress run --reporter junit",
+    "test:integration": "cypress run --browser chrome --reporter junit",
     "test:integration:watch": "cypress open",
     "format": "prettier --write src/**/*.ts src/**/*.tsx",
     "build": "yarn clean && yarn build:server && yarn build:ui",
@@ -53,7 +52,7 @@
     "@types/umzug": "^2.2.2",
     "cache-loader": "^1.2.5",
     "concurrently": "^4.1.0",
-    "cypress": "^4.11.0",
+    "cypress": "^8.3.1",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "httplease-asap": "^0.3.2",
