fix race condition

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/express-session": "^1.17.3",
     "@types/express-winston": "^3.0.0",
     "@types/faker": "^4.1.12",
+    "@types/ioredis-mock": "^5.6.0",
     "@types/jest": "^26.0.5",
     "@types/joi": "^14.3.4",
     "@types/node": "^15.0.2",
@@ -57,6 +58,8 @@
     "html-webpack-plugin": "^3.2.0",
     "httplease-asap": "^0.3.2",
     "husky": "^0.14.3",
+    "ioredis": "^4.28.2",
+    "ioredis-mock": "^5.8.1",
     "jest": "^25.5.4",
     "joi": "^14.3.1",
     "lint-staged": "^5.0.0",
